apps/base/servarr/unmanic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmanic
spec:
  selector:
    matchLabels:
      app: unmanic
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: unmanic
        app.kubernetes.io/instance: unmanic
    spec:
      containers:
        - name: unmanic
          image: josh5/unmanic:latest
          ports:
            - containerPort: 8888
              name: unmanic
              protocol: TCP
          volumeMounts:
            - mountPath: /library
              name: library
            - mountPath: /config
              name: unmanic-config
            - mountPath: /tmp/unmanic
              name: unmanic-cache
      volumes:
        - name: library
          nfs:
            server: 10.0.1.134
            path: /var/nfs/shared/Media_Server/media
        - name: unmanic-config
          persistentVolumeClaim:
            claimName: unmanic-config
        - name: unmanic-cache
          emptyDir: {}
