apps/base/servarr/unmanic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic
spec:
  selector:
    app: unmanic
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      appProtocol: kubernetes.io/ws
